# channel-list

./: .gitignore  README.md  app.py  base_config.toml  pyproject.toml  riguima_channel_list_bot.session  riguima_channel_list_bot.session-journal
channel_list/: config.py  database.py  models.py  utils.py
